[package]
name = "uf-installer"
version = "0.1.1"
edition = "2021"
authors = ["MaksQ"]

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"] }
winreg = "0.10"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
zip = "0.6.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
